--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-##testing thing
-
-<h1>aaa></h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>aaaa</h1>
+</body>
+</html>
