--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>aaaa</h1>
+    <h1>test :D</h1>
+    <p>
+        <a href="https://www.vg.no">Link til vg</a>
+    </p>
+    <script="javascript">
+
+console.log('This is javascript!!')
+
+    </script>
 </body>
 </html>
