--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,3 @@
-<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,9 +9,8 @@
     <p>
         <a href="https://www.vg.no">Link til vg</a>
     </p>
-    <script="javascript">
+    <script src="index.js">
 
-console.log('This is javascript!!')
 
     </script>
 </body>
