--- a/test/index.html
+++ b/test/index.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>test :D</h1>
-    <p>
-        <a href="https://www.vg.no">Link til vg</a>
-    </p>
+<body bgcolor="#696969">
+    <h1 style="color: #fff;">
+        how to make a discord bot on javascript virtual studio code and windows <br><br> ⬇️ click on that link ⬇️first you need to make the bot account.  <p> <a href="https://discord.com/developers/applications">link to the bot creator</a></p> <br><br>once on the website click on new Application in the upper right corner and name it whatever you want to.<br><br>to the left under OAuth2 there should be a tab called Bot, click on the bot tab<br><br>click on the box to the left that says Add Bot, here you can name your bot or change it's profile picture!<br><br>if Requires OAuth2 code grant is activated please diasbale it.<br><br>now we just need to add your bot to your server!<br><br>⬇️click on that link⬇️<p> <a href="https://discordapi.com/permissions.html">permissions calculator</a></p> the link above is the permissions calculator please click on it, when you have the permissions calculator open you need to go back to the bot application tab, click on general information, and copy your client id, now go back to the permissions calculator and paste your bots id in the box in the lower left corner, click on all the boxes to make sure your bot has access to everything, next click on the link in the lower left corner of the permissions tab, now select the server you want your bot in, make sure all the boxes are blue with a white checkmark then click on authorize, your bot is now added in your server!<br><br>now you need to program the bot to go online, click on your file explorer, then desktop, make a folder called discordbot, now close the file explorer and click on the search bar in the lower left or upper right corner next to your windows icon and type cmd, in the command prompt you type cd desktop, then cd discordbot, then npm init, then click on enter 9 times, then type yes, now type npm install node.js, then npm install discord.js, now type node .<br><br>now that we're in visual studio code hover your mouse over you discordbot folder, click on new file, name this file index.js, open index.js, now type this in your index.js folder: const Discord = require('discord.js');<br><br>const prefix = '!';<br><br>const client = new Discord.Client();<br><br><br><br>client.once('ready', () => {<br>console.log('Bot is online!');<br>})<br><br><br><br><br><br>client.login('TOKEN')<br><br> Now to make ur bot function the way you want, go back to the applications website, then click on the tab called bot, copy your token, and replace the TOKEN in the js file with your token, NEVER SHOW YOUR TOKEN OR SEND IT TO ANYONE THE TOKEN IS YOUR BOTS PASSWORD!<br><br>click on the search bar again and type cmd, then cd desktop, then cd discordbot, then node .<br><br><br> now your bot is online and the tutorial ends.
+    </h1>
+
     <script src="index.js">
+
 
 
     </script>
